# mac-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  install.sh  mm  pyproject.toml  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependabot-automerge.yml  lint.yml  release.yml  test.yml  typecheck.yml
launchd/: com.macmanager.battery-alert.plist  com.macmanager.battery-log.plist
macmanager/: __init__.py  __main__.py  alerts.py  battery.py  cache.py  cli.py  dev.py  disk.py  doctor.py  logger.py  network.py  notify.py  security.py  system.py  ui.py  watch.py
scripts/: extract_changelog.py
tests/: test_alerts.py  test_battery.py  test_cache.py  test_dev.py  test_doctor.py  test_extract_changelog.py  test_logger.py  test_network.py  test_security.py  test_smoke.py  test_system.py  test_ui.py
