[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mac-manager"
dynamic = ["version"]
description = "Monitor your Mac's health, security and hardware from the terminal — battery alerts, live dashboard, security audit and dev-tooling inventory."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = [
    "macos",
    "apple-silicon",
    "battery",
    "cli",
    "dashboard",
    "monitoring",
    "system-monitoring",
    "security-audit",
    "developer-tools",
    "launchd",
    "terminal",
]
authors = [
    { name = "Gustavo Armelin", email = "armelingu@gmail.com" },
]
maintainers = [
    { name = "Gustavo Armelin", email = "armelingu@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mm = "macmanager.cli:main"

[project.urls]
Homepage      = "https://github.com/armelingu/mac-manager"
Repository    = "https://github.com/armelingu/mac-manager"
Issues        = "https://github.com/armelingu/mac-manager/issues"
Changelog     = "https://github.com/armelingu/mac-manager/blob/main/CHANGELOG.md"
Documentation = "https://github.com/armelingu/mac-manager#readme"

# ---------------------------------------------------------------------------
# Hatch configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "macmanager/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["macmanager"]

[tool.hatch.build.targets.sdist]
include = [
    "macmanager/**",
    "launchd/**",
    "install.sh",
    "uninstall.sh",
    "mm",
    "README.md",
    "COMMANDS.md",
    "CHANGELOG.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
]
exclude = [
    ".venv",
    "logs",
    "**/__pycache__",
    "**/.DS_Store",
]
