[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mac-manager"
dynamic = ["version"]
description = "Monitor your Mac's health, security and hardware from the terminal — battery alerts, live dashboard, security audit and dev-tooling inventory."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = [
    "macos",
    "apple-silicon",
    "battery",
    "cli",
    "dashboard",
    "monitoring",
    "system-monitoring",
    "security-audit",
    "developer-tools",
    "launchd",
    "terminal",
]
authors = [
    { name = "Gustavo Armelin", email = "armelingu@gmail.com" },
]
maintainers = [
    { name = "Gustavo Armelin", email = "armelingu@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-psutil",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mm = "macmanager.cli:main"

[project.urls]
Homepage      = "https://github.com/armelingu/mac-manager"
Repository    = "https://github.com/armelingu/mac-manager"
Issues        = "https://github.com/armelingu/mac-manager/issues"
Changelog     = "https://github.com/armelingu/mac-manager/blob/main/CHANGELOG.md"
Documentation = "https://github.com/armelingu/mac-manager#readme"

# ---------------------------------------------------------------------------
# Hatch configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "macmanager/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["macmanager"]

# ---------------------------------------------------------------------------
# Ruff (lint + format). Refined further in phase 5.1.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "build", "dist", "logs", "launchd"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie (misc lints)
    "RET",  # flake8-return (return idioms)
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # line-too-long (handled by formatter; keep pragmatic)
    "B008",   # function-call-in-default-arg (common, pragmatic)
    "UP007",  # non-pep604-annotation-union: project still supports Python 3.9
    "UP045",  # non-pep604-annotation-optional: project still supports Python 3.9
    "RET504", # unnecessary-assign-before-return (style preference, hurts readability)
    "SIM117", # multiple-with-statements (often less readable when nested)
    "RUF001", # ambiguous-unicode: project keeps verbatim non-English error strings
    "RUF002", # ambiguous-unicode-docstring: same reasoning
    "RUF003", # ambiguous-unicode-comment: same reasoning
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to use assert statements, mark setup fixtures freely
# and import their target modules at function scope.
"tests/**/*.py" = [
    "B011",   # do-not-call-assert-false (we never call assert False)
    "PT011",  # pytest-raises-too-broad (allow broad pytest.raises in smoke tests)
]
# scripts/ are throwaway maintenance utilities; relax docstring/type rigor.
"scripts/**/*.py" = [
    "T201",   # print is fine in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["macmanager", "tests"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:psutil.*",
]
xfail_strict = true

# ---------------------------------------------------------------------------
# Coverage (opt-in, activated via `pytest --cov=macmanager`)
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["macmanager"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# Mypy
#
# Pragmatic configuration: strict-ish on our own code, but lenient on
# untyped third-party shell-out helpers. The goal is to catch obvious
# bugs without forcing every line of legacy code to be fully typed
# before the first refactor pass.
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.9"
files = ["macmanager", "tests", "scripts"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
no_implicit_reexport = true
check_untyped_defs = true
disallow_untyped_decorators = false  # @cached uses Callable[..., T]; needs ParamSpec to fully type — TODO when we drop Py3.9
ignore_missing_imports = false
follow_imports = "normal"
show_error_codes = true
pretty = true

# Per-module relaxations: Rich and psutil have stubs, but the project
# wraps a lot of shell commands and dynamic dataclasses where strict
# typing buys little.
[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["macmanager.cache"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
check_untyped_defs = true

# `pytest` ships untyped internals that use Python 3.10+ syntax (PEP 634
# pattern matching). When we type-check `tests/` against `python_version
# = "3.9"`, mypy follows the imports into _pytest and chokes on `match`
# statements. Skip following imports into the pytest internals — we
# don't own them and we don't gain anything from typing them here.
[[tool.mypy.overrides]]
module = ["pytest", "pytest.*", "_pytest", "_pytest.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
include = [
    "macmanager/**",
    "launchd/**",
    "install.sh",
    "uninstall.sh",
    "mm",
    "README.md",
    "COMMANDS.md",
    "CHANGELOG.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
]
exclude = [
    ".venv",
    "logs",
    "**/__pycache__",
    "**/.DS_Store",
]
